# voicecode

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_ja.md  README_zh.md  SECURITY.md  app.py  config.json  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  setup.bat  setup.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.tmp_boundary/: config2.json  start_server.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md
packaging/installer/: .gitignore  README.md  VoiceCode.iss  build-installer.ps1  voicecode-onedir.spec
packaging/pyinstaller/: voicecode.spec
packaging/windows/: README.md
src/voicecode/: __init__.py  __main__.py  app.py  main.py  runtime.py
src/voicecode/static/: index.html
src/voicecode/static/js/: api.js  app.js  i18n.js  modal.js  settings.js
static/: index.html
static/css/: app.css
static/js/: config.js  dom.js  history.js  hotkey.js  recorder.js  status.js
tests/: test_app_smoke.py
