[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicecode"
version = "0.1.0"
description = "Offline Windows speech-to-text desktop app for vibe coding"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "VoiceCode contributors" }]
keywords = ["speech-to-text", "whisper", "desktop", "windows", "offline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "faster-whisper==1.1.1",
  "flask==3.1.1",
  "numpy==2.2.6",
  "requests>=2.31.0",
  "pywebview>=5.0.5",
  "pynput>=1.7.6",
  "waitress>=3.0.0",
  "sounddevice>=0.5.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.15.0",
  "mypy>=1.10.0",
  "pre-commit>=4.0.0",
  "types-psutil",
]
tray = [
  "pystray>=0.19.5",
  "Pillow>=10.0.0",
]
build = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
voicecode = "voicecode.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voicecode = ["static/index.html", "static/css/*.css", "static/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
